--- a/llm_Fine_tunings/unsloth_llama3_FineTuned_jan.ipynb
+++ b/llm_Fine_tunings/unsloth_llama3_FineTuned_jan.ipynb
@@ -1089,13 +1089,13 @@
         "### Response:\n",
         "{}\"\"\"\n",
         "\n",
-        "EOS_TOKEN = tokenizer.eos_token # Must add EOS_TOKEN\n",
+        "EOS_TOKEN = tokenizer.eos_token # must add EOS_TOKEN\n",
         "def formatting_prompts_func(examples):\n",
         "    inputs       = examples[\"Content\"]\n",
         "    outputs      = examples[\"Summary\"]\n",
         "    texts = []\n",
         "    for input, output in zip(inputs, outputs):\n",
-        "        # Must add EOS_TOKEN, otherwise your generation will go on forever!\n",
+        "        # must add EOS_TOKEN, otherwise your generation will go on forever!\n",
         "        text = alpaca_prompt.format(input, output) + EOS_TOKEN\n",
         "        texts.append(text)\n",
         "    return { \"text\" : texts, }\n",
